Se agrega ejercicio en equipos del uso de funciones, control de flujo, operadores en JavaScript

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <!--<script src="./script.js"></script>-->
     <!--<script src="./ejercicioTypeOf.js"></script>-->
     <!--<script src="./ejercicioGrupal.js"></script>-->
-    <script src="./operadores.js"></script>
+    <script src="./IMC.js"></script>
 </body>
 </html>
