Se agrega ejercicio del uso de Switch

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <!--<script src="./script.js"></script>-->
     <!--<script src="./ejercicioTypeOf.js"></script>-->
     <!--<script src="./ejercicioGrupal.js"></script>-->
-    <script src="./IMC.js"></script>
+    <script src="./ejercicioSwitch.js"></script>
 </body>
 </html>
