activades correspondientes a arreglos, ciclos, manejo del dom y ejercicios

--- a/index.html
+++ b/index.html
@@ -7,12 +7,35 @@
     <title>Sesiones de JavaScript</title>
 </head>
 <body>
+    
+    <p id="parrafo1"> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore quae labore, est tempora molestias corporis quod officiis fugit suscipit sunt atque, qui ad ratione nihil explicabo ea. Obcaecati, autem sint?</p>
+
+    <p class="parrafos">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse vero debitis repellendus, praesentium cum ipsum repellat similique ipsa qui magnam voluptate obcaecati dolorum cupiditate minima harum, reiciendis eaque aliquam veniam!</p>
+
+
+    <p class="parrafos">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quas culpa ab porro architecto fugit dolorum corporis, laboriosam, nostrum amet iusto beatae reprehenderit exercitationem. Ducimus voluptas nostrum labore error velit.
+    </p>
+
+    <button id ="botonCambiarColor">Cambiar color</button> 
+    <!-- boton con evento onclic en linea es una mala practica
+    <button onclick="cambiaColor('green')" id="botonCambiarColor">Cambiar color</button> 
+
+    <!-- <div>
+        <h1>Contador de Memes</h1>
+        <h2 id="numeroContador">0</h2>
+
+        <button id ="botonIncrementar">Incrementar</button>
+        <button id = "botonDecrementar">Decrementar</button>
+        <button id ="botonResetear">Resetear</button>
+        <img id ="memeRandom" src=" " alt =" Meme Aleatorio" style="display: none;">
+    </div>  -->
 
     <!--los documentos de scripts(js) van antes del cierre del body para incrustar esos scripts
     -->
     <!--<script src="./script.js"></script>-->
     <!--<script src="./ejercicioTypeOf.js"></script>-->
     <!--<script src="./ejercicioGrupal.js"></script>-->
-    <script src="./ejercicioSwitch.js"></script>
+    <script src="./ejercicioCiclos2.js"></script>
 </body>
 </html>
